# brzip.parallel

./: brzip.1  brzip.c  crc32_sse42.c  crc32c.c  gsb_crc32.c  leap_seconds.h  meson.build  meson_options.txt
